Stop characteristics hover from flickering

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -167,6 +167,7 @@ button:hover {
     border-radius: 10px;
     background-color: rgba(200, 200, 200, 0.9);
     z-index: 100;
+    pointer-events: none;
 }
 
 .exo-selector {
